; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/ip17x/extr_ip17x.c_ip17x_getconf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/ip17x/extr_ip17x.c_ip17x_getconf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.ip17x_softc = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (%struct.ip17x_softc.0*)* }
%struct.ip17x_softc.0 = type opaque

@ETHERSWITCH_CONF_VLAN_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_5__*)* @ip17x_getconf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip17x_getconf(i32 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.ip17x_softc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.ip17x_softc* @device_get_softc(i32 %6)
  store %struct.ip17x_softc* %7, %struct.ip17x_softc** %5, align 8
  %8 = load i32, i32* @ETHERSWITCH_CONF_VLAN_MODE, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = load %struct.ip17x_softc*, %struct.ip17x_softc** %5, align 8
  %12 = getelementptr inbounds %struct.ip17x_softc, %struct.ip17x_softc* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32 (%struct.ip17x_softc.0*)*, i32 (%struct.ip17x_softc.0*)** %13, align 8
  %15 = load %struct.ip17x_softc*, %struct.ip17x_softc** %5, align 8
  %16 = bitcast %struct.ip17x_softc* %15 to %struct.ip17x_softc.0*
  %17 = call i32 %14(%struct.ip17x_softc.0* %16)
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  ret i32 0
}

declare dso_local %struct.ip17x_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
